--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiuu FC</title>
-    <img src="cc.jpeg">
+    <img src="logo.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
