--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiuu FC</title>
+    <center>
     <img src="logo.jpg" alt="logo" width="50" height="50">
+    </center>
     <style>
         body {
             font-family: Arial, sans-serif;
