--- a/index.html
+++ b/index.html
@@ -55,32 +55,25 @@
 </header>
 
 <nav>
-    <a href="#about">About Us</a>
-    <a href="#team">Our Team</a>
+    <a href="about.html">About Us</a>
+    <a href="album.html">Our Team</a>
     <a href="#contact">Contact</a>
+     <a href="#contact">Contact</a>\
+
 </nav>
 
 <main>
     <section id="about">
         <h2>About Kiuu FC</h2>
         <p>Kiuu FC is a passionate football club committed to excellence on and off the pitch. Established in 2012, we aim to nurture talent and inspire the next generation of football stars.</p>
-        <p></p>
-    </section>
-
-    <section id="team">
-        <h2>Our Team</h2>
-        <p>Meet the dedicated players and coaching staff of Kiuu FC who work tirelessly to achieve success in every match.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>For inquiries or to learn more about Kiuu FC, feel free to reach out at contact@kiuufc.com.</p>
+        <p>lorem ipsum</p>
     </section>
 </main>
 
 <footer>
     <p>&copy; 2024 Kiuu FC. All Rights Reserved.</p>
 </footer>
+
 
 </body>
 </html>
