--- a/album.html
+++ b/album.html
@@ -17,7 +17,11 @@
 </head>
 <body>
    <center></center>
-    <img src ="img1.jpg" alt="team">
+   <div class="image-slider"> 
+    <img src="img1.jpg" alt="Image 1"> 
+    <img src="img2(1).jpeg" alt="Image 2"> 
+    <img src="img2(2).jpeg" alt="Image 3"> 
+</div> 
     </center>
 </body>
 </html>
