--- a/album.html
+++ b/album.html
@@ -19,8 +19,8 @@
    <center></center>
    <div class="image-slider"> 
     <img src="img1.jpg" alt="Image 1"> 
-    <img src="img2(1).jpeg" alt="Image 2"> 
-    <img src="img2(2).jpeg" alt="Image 3"> 
+    <img src="img2(4).jpeg" alt="Image 2"> 
+    <img src="img1.jpg" alt="Image 3"> 
 </div> 
     </center>
 </body>
