--- a/album.html
+++ b/album.html
@@ -18,9 +18,8 @@
 <body>
    <center></center>
    <div class="image-slider"> 
-    <img src="img1.jpg" alt="Image 1"> 
-    <img src="img2(4).jpeg" alt="Image 2"> 
-    <img src="img1.jpg" alt="Image 3"> 
+    <img src="img1.jpg" alt="Image 1" width="50" height="50"> 
+    <img src="img1.jpg" alt="Image 3"width="50" height="50"> 
 </div> 
     </center>
 </body>
