--- a/album.html
+++ b/album.html
@@ -18,8 +18,8 @@
 <body>
    <center></center>
    <div class="image-slider"> 
-    <img src="img1.jpg" alt="Image 1" width="100" height="50"> 
-    <img src="img1.jpg" alt="Image 3"width="100" height="50"> 
+    <img src="img1.jpg" alt="Image 1" > 
+    <img src="img1.jpg" alt="Image 3"> 
 </div> 
     </center>
 </body>
