--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,7 @@
     <section id="about">
         <h2>About Kiuu FC</h2>
         <p>Kiuu FC is a passionate football club committed to excellence on and off the pitch. Established in 2012, we aim to nurture talent and inspire the next generation of football stars.</p>
-        <p>lorem ipsum</p>
+        
     </section>
 </main>
 
