--- a/about.html
+++ b/about.html
@@ -62,12 +62,12 @@
 
     <div class="about">
         <h2>Our Vision</h2>
-        <p>To be the most trusted and respected provider of [products/services] in the [industry] sector, known for our reliability, quality, and customer service.</p>
-    </div>
+        <p></p>
+ </div>
 
     <div class="about">
         <h2>Our Team</h2>
-        <p>At [Your Company Name], we are proud of our diverse and talented team of professionals. Each member of our team brings unique skills and experiences that contribute to the success of our company. Together, we strive to make a positive impact in our industry and beyond.</p>
+        <p>At our club, we are proud of our diverse and talented team of professionals.</p>
     </div>
 
     <div class="about">
