--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         </p>
     </section>
     </div>
-
+<section>
     <div class="about">
         <h2>Our Vision</h2>
         <p></p>
@@ -69,7 +69,7 @@
         <h2>Our Team</h2>
         <p>At our club, we are proud of our diverse and talented team of professionals.</p>
     </div>
-
+   </section>
     <div class="about">
         <h2>Contact Us</h2>
         <p>If you have any questions or would like to learn more about our services, feel free to reach out to us:</p>
