--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <nav>
     <a href="about.html">About Us</a>
     <a href="album.html">Our Team</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
      <a href="#contact">Contact</a>\
 
 </nav>
