--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     <a href="about.html">About Us</a>
     <a href="album.html">Our Team</a>
     <a href="contact.html">Contact</a>
-     <a href="#contact">Contact</a>\
+     <a href="#Gallery">Gallery</a>
+    <a href="#Gallery">Fixtures & Results</a>
+ <a href="#Gallery">Players</a>
+
 
 </nav>
 
