--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <a href="album.html">Our Team</a>
     <a href="contact.html">Contact</a>
      <a href="#Gallery">Gallery</a>
-    <a href="fixturesresults.html">Fixtures & Results</a>
+    <a href="fixtures.html">Fixtures & Results</a>
     <a href="#Gallery">Players</a>
 
 
