--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -59,7 +59,7 @@
     <a href="album.html">Our Team</a>
     <a href="contact.html">Contact</a>
      <a href="#Gallery">Gallery</a>
-    <a href="fixtures.html">Fixtures & Results</a>
+    <a href="fixture.html">Fixtures & Results</a>
     <a href="#Gallery">Players</a>
 
 
