--- a/fixture.html
+++ b/fixture.html
@@ -49,7 +49,17 @@
 
 <section>
     <div class="about">
-        <h2>Fixtures and Results</h2>
+        <h2>Fixtures</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+   </section>
+<section>
+<div class="about">
+        <h2>Results</h2>
         <ul>
             <li></li>
             <li></li>
