--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <a href="about.html">About Us</a>
     <a href="album.html">Our Team</a>
     <a href="contact.html">Contact</a>
-     <a href="#Gallery">Gallery</a>
+     <a href="gallery.html">Gallery</a>
     <a href="fixture.html">Fixtures & Results</a>
-    <a href="#Gallery">Players</a>
+    <a href="players.html">Players</a>
 
 
 </nav>
