--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,31 @@
             <h3>Image Title 3</h3>
             <p>This is the description of the third image.</p>
         </div>
+    <div class="gallery-item">
+            <img src="image4.jpg" alt="Description of Image 4">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image5.jpg" alt="Description of Image 5">
+            <h3>Image Title 5</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image6.jpg" alt="Description of Image 6">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image7.jpg" alt="Description of Image 7">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>  
+  <div class="gallery-item">
+            <img src="image8.jpg" alt="Description of Image 8">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
         <!-- Add more gallery items as needed -->
     </div>
 </body>
