--- a/gallery.html
+++ b/gallery.html
@@ -68,16 +68,41 @@
         </div>
     <div class="gallery-item">
             <img src="image6.jpg" alt="Description of Image 6">
-            <h3>Image Title 3</h3>
+            <h3>Image Title 6</h3>
             <p>This is the description of the third image.</p>
         </div>
     <div class="gallery-item">
             <img src="image7.jpg" alt="Description of Image 7">
-            <h3>Image Title 3</h3>
+            <h3>Image Title 7</h3>
             <p>This is the description of the third image.</p>
         </div>  
   <div class="gallery-item">
             <img src="image8.jpg" alt="Description of Image 8">
+            <h3>Image Title 8</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image9.jpg" alt="Description of Image 9">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image10.jpg" alt="Description of Image 10">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image11.jpg" alt="Description of Image 11">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image12.jpg" alt="Description of the image 12">
+            <h3>Image Title 3</h3>
+            <p>This is the description of the third image.</p>
+        </div>
+    <div class="gallery-item">
+            <img src="image13.jpg" alt="Description of Image 13">
             <h3>Image Title 3</h3>
             <p>This is the description of the third image.</p>
         </div>
