--- a/gallery.html
+++ b/gallery.html
@@ -42,9 +42,9 @@
 <body>
     <div class="gallery">
         <div class="gallery-item">
-            <img src="image1.jpg" alt="Description of Image 1">
+            <img src="img1.jpg" alt="Team Preparation ">
             <h3>Image Title 1</h3>
-            <p>This is the description of the first image.</p>
+            <p>At Gitugi Grounds ready to face Chui Fc.</p>
         </div>
         <div class="gallery-item">
             <img src="image2.jpg" alt="Description of Image 2">
