--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
     <div class="gallery">
         <div class="gallery-item">
             <img src="img1.jpg" alt="Team Preparation ">
-            <h3>Image Title 1</h3>
+            <h3>Team Preparation</h3>
             <p>At Gitugi Grounds ready to face Chui Fc.</p>
         </div>
         <div class="gallery-item">
