--- a/fixture.html
+++ b/fixture.html
@@ -51,9 +51,10 @@
     <div class="about">
         <h2>Fixtures</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Date:15/09/2024 </li>
+            <li>MatchDay :Kiuu FC vs Kiawambeu Fc</li>
+            <li>Venue: Nyangiti Grounds @ 4pm</li>
+<p>Kosa Uchekwe </p>
         </ul>
     </div>
    </section>
