--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             padding: 0;
         }
         header {
-            background-color: #2c3e50;
+            background-color:#0000ff;
             color: white;
             padding: 20px;
             text-align: center;
