--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #4f4f4f;
+            background-color: #f4f4f4;
             color: #333;
             margin: 0;
             padding: 0;
