--- a/fixture.html
+++ b/fixture.html
@@ -47,13 +47,20 @@
     <h1>Welcome to Kiuu FC</h1>
 </header>
 
-<section>
+<section>
+
     <div class="about">
         <h2>Fixtures</h2>
         <ul>
             <li>Date:15/09/2024 </li>
             <li>MatchDay :Kiuu FC vs Kiawambeu Fc</li>
             <li>Venue: Nyangiti Grounds @ 4pm</li>
+<p>Kosa Uchekwe </p>
+        </ul>
+         <ul>
+            <li>Date:06/10/2024 </li>
+            <li>MatchDay :Kiuu FC vs Green Fc</li>
+            <li>Venue: Gitugi Grounds @ 4pm</li>
 <p>Kosa Uchekwe </p>
         </ul>
     </div>
