--- a/contribution.html
+++ b/contribution.html
@@ -67,6 +67,7 @@
     </div>
 
     <form action="https://formsubmit.co/el/gichurepaul97@gmail.com"method="POST">
+      <input type="gichurepaul97@gmail.com" name="email">
       <input type="text" name="name" placeholder="Your Name" required><br>
       <input type="text" name="message" placeholder="Message or Amount" required><br>
       <button type="submit">Submit Contribution</button>
