--- a/contribution.html
+++ b/contribution.html
@@ -67,7 +67,7 @@
     </div>
 
     <form action="https://formsubmit.co/el/gichurepaul97@gmail.com"method="POST">
-      <input type="email" name="email">
+      <input type="text" name="email"placeholder="Email" required><br>
       <input type="text" name="name" placeholder="Your Name" required><br>
       <input type="text" name="message" placeholder="Message or Amount" required><br>
       <button type="submit">Submit Contribution</button>
