--- a/about.html
+++ b/about.html
@@ -73,11 +73,12 @@
     <div class="about">
         <h2>Contact Us</h2>
         <p>If you have any questions or would like to learn more about our services, feel free to reach out to us:</p>
-        <ul>
-            <li>Email: </li>
-            <li>Phone: </li>
-            <li>Address: </li>
-        </ul>
+            <form action="https://formsubmit.co/el/gichurepaul97@gmail.com"method="POST">
+      <input type="text" name="email"placeholder="Email" required><br>
+      <input type="text" name="name" placeholder="Your Name" required><br>
+      <input type="text" name="message" placeholder="Message " required><br>
+      <button type="submit">Submit Commemt</button>
+    </form>
     </div>
    </section>
 </section>
