--- a/about.html
+++ b/about.html
@@ -39,6 +39,26 @@
             width: 100%;
             bottom: 0;
         }
+    form {
+      margin-top: 20px;
+    }
+    input, button {
+      padding: 10px;
+      width: 80%;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1em;
+    }
+    button {
+      background-color: #027f5c;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #025e45;
+    }
     </style>
 </head>
 <body>
